<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2023-2024 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/libraryNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/categoriesTitleTextView"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginVertical="22dp"
                android:text="@string/categories_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="9dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/photosAlbumListItem"
                        android:layout_width="0dp"
                        android:layout_height="132dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorPrimaryContainer"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp"
                        app:rippleColor="?attr/colorOnPrimaryContainer">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_photo_size_select_actual"
                                app:tint="?attr/colorOnPrimaryContainer" />

                            <TextView
                                style="@style/TextAppearance.Material3.TitleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/album_photos"
                                android:textColor="?attr/colorOnPrimaryContainer" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/videosAlbumListItem"
                        android:layout_width="0dp"
                        android:layout_height="132dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorSecondaryContainer"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp"
                        app:rippleColor="?attr/colorOnSecondaryContainer">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_play_circle_outline"
                                app:tint="?attr/colorOnSecondaryContainer" />

                            <TextView
                                style="@style/TextAppearance.Material3.TitleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/album_videos"
                                android:textColor="?attr/colorOnSecondaryContainer" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/favoritesAlbumListItem"
                        android:layout_width="0dp"
                        android:layout_height="132dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorTertiaryContainer"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp"
                        app:rippleColor="?attr/colorOnTertiaryContainer">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_star_border"
                                app:tint="?attr/colorOnTertiaryContainer" />

                            <TextView
                                style="@style/TextAppearance.Material3.TitleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/album_favorites"
                                android:textColor="?attr/colorOnTertiaryContainer" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/trashAlbumListItem"
                        android:layout_width="0dp"
                        android:layout_height="132dp"
                        android:layout_weight="1"
                        android:layout_margin="8dp"
                        android:checkable="true"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="?attr/colorErrorContainer"
                        app:cardCornerRadius="28dp"
                        app:cardElevation="0dp"
                        app:rippleColor="?attr/colorOnErrorContainer">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:importantForAccessibility="no"
                                android:src="@drawable/ic_delete"
                                app:tint="?attr/colorOnErrorContainer" />

                            <TextView
                                style="@style/TextAppearance.Material3.TitleSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/album_trash"
                                android:textColor="?attr/colorOnErrorContainer" />

                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
